tests/paczka1/fuzzy1/37701420.err
Error in line 1: Knl6e S878 60,8
Error in line 22: HK3q8KDp S878 38,3
